--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -79,10 +80,7 @@ dependencies {
     implementation 'com.github.kizitonwose.time:time-android:1.0.1'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.karumi:dexter:4.2.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.zhihu.android:matisse:0.5.1-beta1'
 
     // Constraining layout
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
