--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
     // Iconics libs
     implementation 'com.mikepenz:iconics-core:3.0.3@aar'
