--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,9 @@ dependencies {
     // Crash
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
 
+    // Event bus
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
