--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
     // Event bus
     implementation 'org.greenrobot:eventbus:3.1.1'
 
+    // File utils
+    implementation 'org.apache.commons:commons-io:1.3.2'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
